--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="style.css">
     <!-- Code from      vuejs.org/v2/guide/installation.html        -->
-    <script src="https://unpkg.com/vue"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+
 </head>
 
 <body>
